Added background-image to button colors

--- a/package/index.html
+++ b/package/index.html
@@ -159,10 +159,10 @@
         </article>
         <article id="notifications" class="indented">
             <div>
-                <button class="anchor" id="show_success">Success</button>
-                <button class="anchor" id="show_error">Error</button>
+                <button class="anchor accept" id="show_success">Success</button>
+                <button class="anchor cancel" id="show_error">Error</button>
                 <button class="anchor" id="show_confirm">Confirm</button>
-                <button class="anchor" id="show_loading">Loading</button>
+                <button class="anchor grey" id="show_loading">Loading</button>
                 <button class="anchor" id="show_progress">Progress</button>
             </div>
         </article>
@@ -175,26 +175,6 @@
             </nav>
             <h1>SECTION 2</h1>
         </header>
-        <article id="a21">
-            Article21
-            <button data-article="a12" class="cancel">First section article 2</button>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-            <input type="text"><br>
-        </article>
         <article id="a22">
             Article22
             <button data-article="a11" class="accept">First Section</button>
