Fixings for android 2.3

--- a/package/index.html
+++ b/package/index.html
@@ -23,6 +23,7 @@
             <li data-article="lists">Lists</li>
             <li data-article="buttons">Buttons</li>
             <li data-article="layouts">Layouts</li>
+            <li data-article="notifications">Notifications</li>
         </ul>
     </aside>
 
