--- a/package/index.html
+++ b/package/index.html
@@ -35,6 +35,7 @@
             <h1>TaKo!!</h1>
         </header>
         <article id="main">
+            <span class="icon heart animated"></span>
             <button class="anchor" data-article="notifications">Action</button>
         </article>
         <article id="buttons" class="indented">
