Modifications on icon styles

--- a/package/index.html
+++ b/package/index.html
@@ -35,7 +35,7 @@
             <h1>TaKo!!</h1>
         </header>
         <article id="main">
-            <span class="icon heart animated"></span>
+            <button class="biggest icon spin1 animated">Hola</button>
             <button class="anchor" data-article="notifications">Action</button>
         </article>
         <article id="buttons" class="indented">
