Icons styled on footer

--- a/package/index.html
+++ b/package/index.html
@@ -35,7 +35,7 @@
             <h1>TaKo!!</h1>
         </header>
         <article id="main">
-            <button class="biggest icon spin1 animated">Hola</button>
+            <button class="biggest icon spin1 animated" data-section="section_2">Hola</button>
             <button class="anchor" data-article="notifications">Action</button>
         </article>
         <article id="buttons" class="indented">
@@ -183,7 +183,7 @@
         </article>
         <footer>
             <nav>
-                <div><button id="show_success2">Success<span class="counter">5</span></button></div>
+                <div><button class="icon ok" id="show_success2">Success<span class="counter">5</span></button></div>
                 <div><button id="show_progress2">Progress<span class="counter">84</span></button></div>
             </nav>
         </footer>
