Remove unnececessary comments

--- a/package/index.html
+++ b/package/index.html
@@ -36,6 +36,11 @@
         </header>
         <article id="main">
             <button class="biggest icon spin1 animated" data-section="section_2">Hola</button>
+            <button class="biggest icon spin2 animated" data-section="section_2">Hola</button>
+            <button class="biggest icon spin3 animated" data-section="section_2">Hola</button>
+            <button class="biggest icon spin4 animated" data-section="section_2">Hola</button>
+            <button class="biggest icon spin5 animated" data-section="section_2">Hola</button>
+            <button class="biggest icon spin6 animated" data-section="section_2">Hola</button>
             <button class="anchor" data-article="notifications">Action</button>
         </article>
         <article id="buttons" class="indented">
