--- a/package/index.html
+++ b/package/index.html
@@ -41,6 +41,7 @@
             <button class="biggest icon spin4 animated" data-section="section_2">Hola</button>
             <button class="biggest icon spin5 animated" data-section="section_2">Hola</button>
             <button class="biggest icon spin6 animated" data-section="section_2">Hola</button>
+            <button class="biggest icon ok animated" data-section="section_2">Hola</button>
             <button class="anchor" data-article="notifications">Action</button>
         </article>
         <article id="buttons" class="indented">
