Improvd heder buttons

--- a/package/index.html
+++ b/package/index.html
@@ -30,7 +30,7 @@
     <section id="section_1">
         <header>
             <nav class="left">
-                <button class="button icon ellipsis" data-action="aside">Aside <span class="counter">5</span></button>
+                <button class="button" data-action="aside"><span class="icon ellipsis-vert"></span>Aside <span class="counter">5</span></button>
             </nav>
             <h1>TaKo!!</h1>
         </header>
@@ -43,6 +43,7 @@
             <button class="biggest icon spin6 animated" data-section="section_2">Hola</button>
             <button class="biggest icon ok animated" data-section="section_2">Hola</button>
             <button class="biggest" data-section="section_2"><span class="biggest icon ok animated"></span></button>
+            <button class="biggest" data-section="section_2"><span class="biggest icon ok animated"></span>Hola</button>
             <button class="anchor" data-article="notifications">Action</button>
         </article>
         <article id="buttons" class="indented">
