Added extended header

--- a/package/index.html
+++ b/package/index.html
@@ -27,12 +27,17 @@
         </ul>
     </aside>
 
-    <section id="section_1">
+    <section id="section_1" class="extended_header">
         <header>
             <nav class="left">
                 <button class="button" data-action="aside"><span class="icon ellipsis-vert"></span>Aside <span class="counter">5</span></button>
             </nav>
             <h1>TaKo!!</h1>
+            <nav>
+                <span class="current">Elem1</span>
+                <span>Elem2</span>
+                <span>Elem3</span>
+            </nav>
         </header>
         <article id="main">
             <button class="biggest icon spin1 animated" data-section="section_2">Hola</button>
