--- a/package/index.html
+++ b/package/index.html
@@ -34,7 +34,7 @@
             </nav>
             <h1>TaKo!!</h1>
             <nav>
-                <span class="current">Elem1</span>
+                <span class="current icon ok">Elem1</span>
                 <span>Elem2</span>
                 <span>Elem3</span>
             </nav>
