--- a/package/index.html
+++ b/package/index.html
@@ -205,7 +205,10 @@
     <script src="js/TaKo.components.js"></script>
     <script src="js/TaKo.debug.js"></script>
     <script>
-        TaKo.init();
+        TaKo.onReady(function(){
+            console.log("LOADED");
+        });
+        TaKo.init({"sections": ["section2.html"]});
         $("#show_success").bind("tap", function(){
             TaKo.Notification.success("ok", "Success!!","Everything worked fine", null, function(){console.log("SUCCESS CB");})
         });
