Header button size changes

--- a/package/index.html
+++ b/package/index.html
@@ -40,6 +40,7 @@
             </nav>
         </header>
         <article id="main">
+            <span class="icon spin1 animated"></span>
             <button class="biggest icon spin1 animated" data-section="section_2">Hola</button>
             <button class="biggest icon spin2 animated" data-section="section_2">Hola</button>
             <button class="biggest icon spin3 animated" data-section="section_2">Hola</button>
