Fixngs for animations in android

--- a/package/index.html
+++ b/package/index.html
@@ -14,6 +14,7 @@
 
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="stylesheets/TaKo.css">
+    <!-- <link rel="stylesheet" href="stylesheets/anim.css"> -->
 </head>
 
 <body>
@@ -40,16 +41,14 @@
             </nav>
         </header>
         <article id="main">
-            <span class="icon spin1 animated"></span>
-            <button class="biggest icon spin1 animated" data-section="section_2">Hola</button>
-            <button class="biggest icon spin2 animated" data-section="section_2">Hola</button>
-            <button class="biggest icon spin3 animated" data-section="section_2">Hola</button>
-            <button class="biggest icon spin4 animated" data-section="section_2">Hola</button>
-            <button class="biggest icon spin5 animated" data-section="section_2">Hola</button>
-            <button class="biggest icon spin6 animated" data-section="section_2">Hola</button>
-            <button class="biggest icon ok animated" data-section="section_2">Hola</button>
+            <button class="biggest" data-section="section_2"><span class="icon spin1 animated"></span><span>Hola</span></button>
+            <button class="biggest" data-section="section_2"><span class="icon spin2 animated"></span><span>Hola</span></button>
+            <button class="biggest" data-section="section_2"><span class="icon spin3 animated"></span><span>Hola</span></button>
+            <button class="biggest" data-section="section_2"><span class="icon spin4 animated"></span><span>Hola</span></button>
+            <button class="biggest" data-section="section_2"><span class="icon spin5 animated"></span><span>Hola</span></button>
+            <button class="biggest" data-section="section_2"><span class="icon spin6 animated"></span><span>Hola</span></button>
             <button class="biggest" data-section="section_2"><span class="biggest icon ok animated"></span></button>
-            <button class="biggest" data-section="section_2"><span class="biggest icon ok animated"></span>Hola</button>
+            <button class="biggest" data-section="section_2"><span class="biggest icon ok animated"></span><span>Hola</span></button>
             <button class="anchor" data-article="notifications">Action</button>
         </article>
         <article id="buttons" class="indented">
