Improvements on buttons

--- a/package/index.html
+++ b/package/index.html
@@ -49,6 +49,8 @@
             <button class="biggest" data-section="section_2"><span class="icon spin6 animated"></span><span>Hola</span></button>
             <button class="biggest" data-section="section_2"><span class="biggest icon ok animated"></span></button>
             <button class="biggest" data-section="section_2"><span class="biggest icon ok animated"></span><span>Hola</span></button>
+            <button class="biggest icon ok" data-section="section_2">Hola</button>
+            <button class="biggest icon ok" data-section="section_2"></button>
             <button class="anchor" data-article="notifications">Action</button>
         </article>
         <article id="buttons" class="indented">
