--- a/package/index.html
+++ b/package/index.html
@@ -210,6 +210,13 @@
         TaKo.onReady(function(){
             console.log("LOADED");
         });
+        TaKo.Connection.onChange(function(online){
+            if(online){
+                alert("Connected")
+            }else{
+                alert("Disconnected");
+            }
+        });
         TaKo.init({"sections": ["section2.html"]});
         $("#show_success").bind("tap", function(){
             TaKo.Notification.success("ok", "Success!!","Everything worked fine", null, function(){console.log("SUCCESS CB");})
