--- a/package/index.html
+++ b/package/index.html
@@ -12,9 +12,8 @@
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="cleartype" content="on">
 
-    <!-- Main Stylesheet -->
     <link rel="stylesheet" href="stylesheets/TaKo.css">
-    <!-- <link rel="stylesheet" href="stylesheets/anim.css"> -->
+    <link rel="stylesheet" href="stylesheets/TaKo.theme.css">
 </head>
 
 <body>
@@ -210,13 +209,13 @@
         TaKo.onReady(function(){
             console.log("LOADED");
         });
-        TaKo.Connection.onChange(function(online){
-            if(online){
-                alert("Connected")
-            }else{
-                alert("Disconnected");
-            }
-        });
+        // TaKo.Connection.onChange(function(online){
+        //     if(online){
+        //         alert("Connected")
+        //     }else{
+        //         alert("Disconnected");
+        //     }
+        // });
         TaKo.init({"sections": ["section2.html"]});
         $("#show_success").bind("tap", function(){
             TaKo.Notification.success("ok", "Success!!","Everything worked fine", null, function(){console.log("SUCCESS CB");})
