Added imgs to buttons

--- a/package/index.html
+++ b/package/index.html
@@ -32,6 +32,9 @@
             <nav class="left">
                 <button class="button" data-action="aside"><span class="icon ellipsis-vert"></span>Aside <span class="counter">5</span></button>
             </nav>
+            <nav class="right">
+                <button class="button" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+            </nav>
             <h1>TaKo!!</h1>
             <nav>
                 <span class="current icon ok">Elem1</span>
@@ -50,6 +53,12 @@
             <button class="biggest" data-section="section_2"><span class="biggest icon ok animated"></span><span>Hola</span></button>
             <button class="biggest icon ok" data-section="section_2">Hola</button>
             <button class="biggest icon ok" data-section="section_2"></button>
+            <button class="button smallest" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+            <button class="button small" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+            <button class="button" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+            <button class="button big" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+            <button class="button biggest" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
             <button class="anchor" data-article="notifications">Action</button>
         </article>
         <article id="buttons" class="indented">
