--- a/package/index.html
+++ b/package/index.html
@@ -30,7 +30,7 @@
     <section id="section_1" class="extended_header">
         <header>
             <nav class="left">
-                <button class="button" data-action="aside"><span class="icon ellipsis-vert"></span>Aside <span class="counter">5</span></button>
+                <button class=" icon ellipsis-vert" data-action="aside">Aside</button>
             </nav>
             <nav class="right">
                 <button class="button" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
