--- a/package/index.html
+++ b/package/index.html
@@ -30,7 +30,7 @@
     <section id="section_1" class="extended_header">
         <header>
             <nav class="left">
-                <button class=" icon ellipsis-vert" data-action="aside">Aside</button>
+                <button class=" icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
             </nav>
             <nav class="right">
                 <button class="button" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
@@ -76,52 +76,44 @@
         <article id="forms" class="indented">
             <div>
                 <form>
-                    <fieldset class="grey"><label class="anchor">Text</label></fieldset>
                     <fieldset>
+                        <legend>Text</legend>
                         <label for="input">Default</label>
                         <input type="text" id="input">
-                    </fieldset>
-                    <fieldset>
                         <label for="line">Line</label>
                         <input type="text" id="line" class="line">
-                    </fieldset>
-                    <fieldset class="theme">
-                        <label for="background">No background</label>
+                        <label for="background">No back</label>
                         <input type="text" id="background" class="no_background">
-                    </fieldset>
-                    <fieldset>
                         <label for="border">No border</label>
                         <input type="text" id="border" class="no_border">
-                    </fieldset>
-                    <fieldset>
                         <label for="border">Textarea</label>
                         <textarea placeholder="The textarea can have the input texts' styles"></textarea>
                     </fieldset>
                     <br>
-                    <fieldset class="grey"><label class="anchor">Checkboxes & Radiobuttons</label></fieldset>
                     <fieldset>
+                        <legend>Checkboxes & Radiobuttons</legend>
                         <label for="square">Square</label>
                         <input type="checkbox" id="square" class="square">
                         <input type="radio" id="square_r" name="radio" class="square">
-                    </fieldset>
-                    <fieldset>
+                        <div class="clear"></div>
+                        <br>
                         <label for="circle">Circle</label>
                         <input type="checkbox" id="circle" class="circle">
                         <input type="radio" id="circle_r" name="radio" class="circle">
-                    </fieldset>
-                    <fieldset>
+                        <div class="clear"></div>
+                        <br>
                         <label for="switch">Switch</label>
                         <input type="checkbox" id="switch" class="switch">
                         <input type="radio" id="switch_r" name="radio" class="switch">
-                    </fieldset>
-                    <fieldset>
+                        <div class="clear"></div>
+                        <br>
                         <label for="switch_c">Circle Switch</label>
                         <input type="checkbox" id="switch_c" class="switch circle">
                         <input type="radio" id="switch_c_r" name="radio" class="switch circle">
                     </fieldset>
                     <br>
-                    <fieldset class="grey"><label class="anchor">Others</label></fieldset>
                     <fieldset>
+                        <legend>Others</legend>
                         <label for="select_box">Select</label>
                         <label class="select">
                             <select name="" id="select_box">
@@ -132,8 +124,7 @@
                                 <option value="elem5">Elem5</option>
                             </select>
                         </label>
-                    </fieldset>
-                    <fieldset>
+                        <br>
                         <label for="range">Range</label>
                         <input type="range" id="range">
                     </fieldset>
