Changes on fieldset container

--- a/package/index.html
+++ b/package/index.html
@@ -82,7 +82,6 @@
                         <input type="text" id="input">
                         <label for="line">Line</label>
                         <input type="text" id="line" class="line">
-                        <div class="clear"></div>
                         <label for="background">No back</label>
                         <input type="text" id="background" class="no_background">
                         <label for="border">No border</label>
@@ -209,7 +208,7 @@
     <script>
         Tako.onReady(function(){
             console.log("LOADED");
-            Tako.Article.goTo("forms");
+            // Tako.Article.goTo("forms");
         });
         // Tako.Connection.onChange(function(online){
         //     if(online){
