More form changes

--- a/package/index.html
+++ b/package/index.html
@@ -96,17 +96,14 @@
                         <input type="checkbox" id="square" class="square">
                         <input type="radio" id="square_r" name="radio" class="square">
                         <div class="clear"></div>
-                        <br>
                         <label for="circle">Circle</label>
                         <input type="checkbox" id="circle" class="circle">
                         <input type="radio" id="circle_r" name="radio" class="circle">
                         <div class="clear"></div>
-                        <br>
                         <label for="switch">Switch</label>
                         <input type="checkbox" id="switch" class="switch">
                         <input type="radio" id="switch_r" name="radio" class="switch">
                         <div class="clear"></div>
-                        <br>
                         <label for="switch_c">Circle Switch</label>
                         <input type="checkbox" id="switch_c" class="switch circle">
                         <input type="radio" id="switch_c_r" name="radio" class="switch circle">
@@ -189,7 +186,7 @@
             <nav class="right">
                 <button data-action="aside">ASIDE!!<span class="counter">5</span></button>
             </nav>
-            <h1>SECTION 2</h1>
+            <h1><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></h1>
         </header>
         <article id="a22">
             Article22
