--- a/package/index.html
+++ b/package/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <title>TaKo</title>
-    <meta name="description" content="">
-    <meta name="author" content="Inigo Gonzalez (@haas85)">
-    <meta name="HandheldFriendly" content="True">
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="description" content="Tako framework for mobile webapps">
+    <meta name="author" content="Inigo Gonzalez - @haas85">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="cleartype" content="on">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="HandheldFriendly" content="True">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
     <link rel="stylesheet" href="stylesheets/tako.css">
     <link rel="stylesheet" href="stylesheets/tako.theme.css">
