--- a/package/index.html
+++ b/package/index.html
@@ -30,10 +30,11 @@
     <section id="section_1" class="extended_header">
         <header>
             <nav class="left">
-                <button class=" icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
+                <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
+                <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
             </nav>
             <nav class="right">
-                <button class="button" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                <button  data-visible="buttons" class="button" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
             </nav>
             <h1>TaKo!!</h1>
             <nav>
