Added image to list

--- a/package/index.html
+++ b/package/index.html
@@ -131,6 +131,8 @@
         <article id="lists" class="indented">
             <div>
                 <ul>
+                    <li><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><strong>Elem 1</strong><small>small elem</small></li>
+                    <li><strong>Elem 1</strong><small>small elem</small></li>
                     <li><strong>Elem 1</strong><small>small elem</small></li>
                     <li><strong>Elem 2</strong></li>
                     <li class="separator">Elem3</li>
