Added big image to lists

--- a/package/index.html
+++ b/package/index.html
@@ -132,6 +132,7 @@
             <div>
                 <ul>
                     <li><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><strong>Elem 1</strong><small>small elem</small></li>
+                    <li><img class="big" src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><strong>Elem 1</strong><small>small elem</small></li>
                     <li><strong>Elem 1</strong><small>small elem</small></li>
                     <li><strong>Elem 1</strong><small>small elem</small></li>
                     <li><strong>Elem 2</strong></li>
