--- a/package/index.html
+++ b/package/index.html
@@ -131,6 +131,7 @@
         <article id="lists" class="indented">
             <div>
                 <ul>
+                    <li class="icon box"><strong>Elem 1</strong><small>small elem</small></li>
                     <li><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><strong>Elem 1</strong><small>small elem</small></li>
                     <li><img class="big" src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><strong>Elem 1</strong><small>small elem</small></li>
                     <li><strong>Elem 1</strong><small>small elem</small></li>
@@ -208,7 +209,7 @@
     <script>
         Tako.onReady(function(){
             console.log("LOADED");
-            // Tako.Article.goTo("forms");
+            Tako.Article.goTo("lists");
         });
         // Tako.Connection.onChange(function(online){
         //     if(online){
