--- a/package/index.html
+++ b/package/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- <aside class="full"> -->
-    <aside class>
+    <aside>
         <ul>
             <li data-article="forms">Forms <span class="counter">125</span></li>
             <li data-article="lists">Lists</li>
