--- a/package/index.html
+++ b/package/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <!-- <aside class="full"> -->
-    <aside>
+    <aside class="full">
+    <!-- <aside> -->
         <ul>
             <li data-article="forms">Forms <span class="counter">125</span></li>
             <li data-article="lists">Lists</li>
@@ -246,6 +246,6 @@
             setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
-    <!-- <script src="http://192.168.2.100:8080/target/target-script-min.js"></script> -->
+    <!-- <script src="http://192.168.2.101:8080/target/target-script-min.js"></script> -->
 </body>
 </html>
