Changes in button styling

--- a/package/index.html
+++ b/package/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <aside class="full">
-    <!-- <aside> -->
+    <!-- <aside class="full"> -->
+    <aside>
         <ul>
             <li data-article="forms">Forms <span class="counter">125</span></li>
             <li data-article="lists">Lists</li>
@@ -28,7 +28,7 @@
         </ul>
     </aside>
 
-    <section id="section_1" class="extended_header">
+    <section id="section_1" class="extended_header footer">
         <header>
             <nav class="left">
                 <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
