Fixings on start

--- a/package/index.html
+++ b/package/index.html
@@ -28,7 +28,7 @@
         </ul>
     </aside>
 
-    <section id="section_1" class="extended_header footer">
+    <section id="section_1">
         <header>
             <nav class="left">
                 <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
