Improved aside.full transition

--- a/package/index.html
+++ b/package/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <!-- <aside class="full"> -->
-    <aside>
+    <aside class="full">
+    <!-- <aside> -->
         <ul>
             <li data-article="forms">Forms <span class="counter">125</span></li>
             <li data-article="lists">Lists</li>
