Fixings for buttons

--- a/package/index.html
+++ b/package/index.html
@@ -54,32 +54,80 @@
         </article>
         <article id="buttons" class="indented">
             <div>
-                <button class="anchor">Anchor</button>
-                <button class="anchor accept">Accept</button>
-                <button class="anchor cancel">Cancel</button>
-                <button class="smallest">Smallest</button>
-                <button class="small">Small</button>
-                <button >Normal</button>
-                <button class="big">Big</button>
-                <button class="biggest">Biggest</button> <br>
+                <p>
+                    <button class="anchor">Anchor</button>
+                    <button class="anchor accept">Accept</button>
+                    <button class="anchor cancel">Cancel</button>
+                </p>
 
-                <br>
+                <p>
+                    <button class="smallest">Smallest</button>
+                    <button class="small">Small</button>
+                    <button >Normal</button>
+                    <button class="big">Big</button>
+                    <button class="biggest">Biggest</button>
+                </p>
 
-                <button class="biggest" data-section="section_2"><span class="icon spin1 animated"></span><span>Hola</span></button>
-                <button class="biggest" data-section="section_2"><span class="icon spin2 animated"></span><span>Hola</span></button>
-                <button class="biggest" data-section="section_2"><span class="icon spin3 animated"></span><span>Hola</span></button>
-                <button class="biggest" data-section="section_2"><span class="icon spin4 animated"></span><span>Hola</span></button>
-                <button class="biggest" data-section="section_2"><span class="icon spin5 animated"></span><span>Hola</span></button>
-                <button class="biggest" data-section="section_2"><span class="icon spin6 animated"></span><span>Hola</span></button>
-                <button class="biggest" data-section="section_2"><span class="biggest icon ok animated"></span></button>
-                <button class="biggest" data-section="section_2"><span class="biggest icon ok animated"></span><span>Hola</span></button>
-                <button class="biggest icon ok" data-section="section_2">Hola</button>
-                <button class="biggest icon ok" data-section="section_2"></button>
-                <button class="button smallest" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-                <button class="button small" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-                <button class="button" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-                <button class="button big" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-                <button class="button biggest" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                <p>
+                    <button class="smallest"><span class="icon spin1 animated"></span><span>Hola</span></button>
+
+                    <button class="small"><span class="icon spin2 animated"></span><span>Hola</span></button>
+
+                    <button class=""><span class="icon spin3 animated"></span><span>Hola</span></button>
+
+                    <button class="big"><span class="icon spin4 animated"></span><span>Hola</span></button>
+
+                    <button class="biggest"><span class="icon spin5 animated"></span><span>Hola</span></button>
+                </p>
+
+                <p>
+                    <button class="smallest icon ok">Hola</button>
+
+                    <button class="small icon ok">Hola</button>
+
+                    <button class="icon ok">Hola</button>
+
+                    <button class="big icon ok">Hola</button>
+
+                    <button class="biggest icon ok">Hola</button>
+                </p>
+
+                <p>
+                    <button class="smallest icon ok"></button>
+
+                    <button class="small icon ok"></button>
+
+                    <button class="icon ok"></button>
+
+                    <button class="big icon ok"></button>
+
+                    <button class="biggest icon ok"></button>
+                </p>
+
+                <p>
+                    <button class="button smallest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
+                    <button class="button small"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
+                    <button class="button"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
+                    <button class="button big"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
+                    <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                </p>
+
+                <p>
+                    <button class="button smallest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+
+                    <button class="button small"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+
+                    <button class="button"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+
+                    <button class="button big"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+
+                    <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+                </p>
+
             </div>
         </article>
         <article id="forms" class="indented">
